--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <li><a href="#listings">Listings</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#testimonials">Reviews</a></li>
-          <li><a class="btn btn-sm" href="#contact">Book Consult</a></li>
+          <li><a class="btn btn-sm" href="#contact">Book Consultation</a></li>
         </ul>
       </nav>
     </div>
